# baryonlang

./: .gitignore  README.md  baryon.py  future.md  pyproject.toml
baryonlang/: baryon.py
baryonlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
baryonlang/functions/: gen_bash.py  gen_nextflow.py  gen_python.py  gen_r.py  gen_streamflow.py  parse_and_validate.py
baryonlang/utility/: run_function.py  run_function.sh
example/HTGTS_Full/: HTGTS_Full.bala  htgts_full-params.yml  htgts_full.R  htgts_full.cwl  htgts_full.nf  htgts_full.py  htgts_full.sh  htgts_full.xml  htgts_full.yml  htgts_full_nextflow.txt
example/index_align_bulk_rna_seq/: index_align_bulk_rna_seq-params.yml  index_align_bulk_rna_seq.R  index_align_bulk_rna_seq.bala  index_align_bulk_rna_seq.cwl  index_align_bulk_rna_seq.nf  index_align_bulk_rna_seq.py  index_align_bulk_rna_seq.sh  index_align_bulk_rna_seq.xml  index_align_bulk_rna_seq.yml  index_align_bulk_rna_seq_nextflow.txt  index_align_bulk_rna_seq_targz.xml
example/index_align_scrs/: index_align_scrs-params.yml  index_align_scrs.R  index_align_scrs.bala  index_align_scrs.cwl  index_align_scrs.nf  index_align_scrs.py  index_align_scrs.sh  index_align_scrs.xml  index_align_scrs.yml  index_align_scrs_nextflow.txt  index_align_scrs_targz.xml
example/sample_sheetTolibInfo/: sample_sheetTolibInfo.bala  sample_sheettolibinfo-params.yml  (+8 more)
functions/: colors.py  gen_bash.py  gen_erre.py  gen_galaxy.py  gen_nextflow.py  gen_python.py  gen_r.py  gen_streamflow.py  parse_and_validate.py
utility/: readme.md  run_function.R
(+15 files in other folders)
