[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baryonlang"
version = "1.1.0"
description = "Generates execution scripts (Python, R, Bash, Nextflow, Streamflow, Galaxy) for bioinformatics pipelines from .bala configuration files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Fairflow Bioinformatics Framework" }]
keywords = ["bioinformatics", "workflow", "nextflow", "galaxy", "streamflow"]

dependencies = []

[project.scripts]
baryon = "baryonlang.baryon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["baryonlang*"]